@@ -20,12 +20,13 @@ class freeradius::v3::conf::instantiate (
 
   ensure_resource ('file',  "${freeradius::confdir}/conf.d",
     {
-      ensure => 'directory',
-      owner  => 'root',
-      group  => $freeradius::group,
-      mode   => '0640',
-      purge  => true,
-      before => Service['radiusd'],
+      ensure  => 'directory',
+      owner   => 'root',
+      group   => $freeradius::group,
+      mode    => '0640',
+      recurse => true,
+      purge   => true,
+      before  => Service['radiusd'],
     })
 
   file { "${freeradius::confdir}/conf.d/instantiate.inc":
