@@ -1,6 +1,6 @@
 {
   "name": "simp-freeradius",
-  "version": "8.6.1",
+  "version": "8.6.2",
   "author": "SIMP Team",
   "summary": "manages FreeRADIUS authentication servers",
   "license": "Apache-2.0",
